--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 
    			<div class="intro-info">
 
-   				<img src="images/profile-pic.jpg" alt="Profile Picture">
+   				<img src="images/profile-pic.JPG" alt="Profile Picture">
 
    				<p class="lead">As a backend developer, I'm passionate about crafting robust and efficient solutions that power the digital world. I thrive on turning complex challenges into streamlined code and ensuring seamless server-side functionality.</p>
    			</div>   			
