--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
    <!--- basic page needs
    ================================================== -->
    <meta charset="utf-8">
-	<title>Chukwuka Ibejih - Portfolio Website</title>
+	<title>Ibejih Chukwuka</title>
 	<meta name="description" content="">  
 	<meta name="author" content="">
 
