changed and resized picture

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
 				<div class="intro-info">
 
-					<img src="images/profile-pic.JPG" alt="Profile Picture">
+					<img src="images/profile picture1.jpg" alt="Profile Picture">
 
 					<p class="lead">As a backend developer, I'm passionate about crafting robust and efficient solutions
 						that power the digital world. I thrive on turning complex challenges into streamlined code and
