--- a/index.html
+++ b/index.html
@@ -483,8 +483,8 @@
 		<div class="row section-intro">
 			<div class="col-twelve">
 
-				<h5>ALX</h5>
-				<h1>ALX related Projects.</h1>
+				<h5>ALX Projects</h5>
+				<h1>Some ALX related projects.</h1>
 			</div>
 		</div> <!-- /section-intro-->
 
