--- a/index.html
+++ b/index.html
@@ -515,7 +515,7 @@
 
 					<div class="bgrid folio-item">
 						<div class="item-wrap">
-							<iframe width="500" height="275" src="https://www.youtube.com/embed/1tvOYD8-858" frameborder="0"
+							<iframe width="550" height="275" src="https://www.youtube.com/embed/1tvOYD8-858" frameborder="0"
 								allowfullscreen></iframe>
 							<!-- <a href="https://youtu.be/1tvOYD8-858" class="overlay">
 								<div class="folio-item-table">
@@ -533,18 +533,8 @@
 
 					<div class="bgrid folio-item">
 						<div class="item-wrap">
-							<iframe width="500" height="275" src="https://youtu.be/1tvOYD8-858" frameborder="0"
+							<iframe width="550" height="275" src="https://www.youtube.com/embed/-FFNB5gUv_k" frameborder="0"
 								allowfullscreen></iframe>
-							<a href="#" class="overlay">
-								<div class="folio-item-table">
-									<div class="folio-item-cell">
-										<h3 class="folio-title">Elevator pitch</h3>
-										<span class="folio-types">
-											This is a placeholder
-										</span>
-									</div>
-								</div>
-							</a>
 						</div>
 					</div> <!-- /folio-item -->
 
